...
            <Circle size={88} bw="$0.5" borderColor="$grey-100" bg={backgroundColor ?? '$white'}>
              {logo?.url ? (
                <Image
                  circle
                  src={logo.url}
                  alt={logo.altText}
                  testID={isImageLoaded ? 'entity-image-loaded' : 'entity-image'}
                  onLoad={() => setIsImageLoaded(true)}
                  width="100%"
                  height="100%"
                  contentFit="contain"
                />
              ) : (
...
