appId: id.paradym.wallet.preview
---
- openLink:
    link: ${deeplink}

- runFlow:
    when:
      visible: .*Open in.*
      platform: ios
    commands:
      - tapOn: Open

- repeat:
    times: 6
    commands:
      - tapOn: "Pin number 1"

- waitForAnimationToEnd:
    timeout: 5000

- extendedWaitUntil:
    visible: "Yes, continue"
    timeout: 100000
- tapOn: "Yes, continue"

- waitForAnimationToEnd:
    timeout: 5000


- waitForAnimationToEnd:
    timeout: 5000

- assertVisible: Review the request
- tapOn: Share

- repeat:
    times: 6
    commands:
      - tapOn: "Pin number 1"

- assertVisible: Is the information correct?
- tapOn: Accept

- waitForAnimationToEnd:
    timeout: 30000

# Due to animations, it can take some time before the home screen becomes visible.
- extendedWaitUntil:
    visible: "Success!"
    timeout: 120000

- waitForAnimationToEnd:
    timeout: 30000
- assertVisible: "Card successfully added to your wallet!"
- assertVisible: "Credential"

# On Android the button is "Go to wallet" (without space), while on iOS a trailing space is required.
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: "Go to wallet"
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: "Go to wallet,  "

- waitForAnimationToEnd:
    timeout: 5000

- assertVisible: "Hello!"
- assertVisible: "Receive or share from your wallet "
